--- a/index.html
+++ b/index.html
@@ -689,12 +689,24 @@
         function uploadFile(target) {
             const file = target.files[0];
             if (file && currentRoom) {
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    socket.emit('chat message', { room: currentRoom, name: userName, text: e.target.result, type: 'image' });
-                };
-                reader.readAsDataURL(file);
-                target.value = '';
+                const formData = new FormData();
+                formData.append('image', file);
+                formData.append('room', currentRoom); // 서버가 받을 방 이름
+                formData.append('name', userName);    // 서버가 받을 유저 이름
+
+                // 서버의 /upload 라우트로 파일 전송
+                fetch('/upload', {
+                    method: 'POST',
+                    body: formData
+                })
+                    .then(res => res.json())
+                    .then(data => {
+                        console.log('업로드 성공:', data.url);
+                        // 소켓 메시지는 서버에서 직접 브로드캐스트하므로 클라이언트에서 보낼 필요 없음
+                    })
+                    .catch(err => alert('업로드 실패'));
+
+                target.value = ''; // 입력창 초기화
             }
         }
 
