--- a/index.html
+++ b/index.html
@@ -302,7 +302,10 @@
         </div>
 
         <div style="margin-top: 20px; color: #888; font-size: 0.9rem;">
-            문의 제이투코어 | 📧 jjyong3872@naver.com
+            문의 제이투코어 |
+            <a href="mailto:jjyong3872@naver.com" style="color: #6e8efb; text-decoration: none; font-weight: 500;">
+                📧 jjyong3872@naver.com
+            </a>
         </div>
     </div>
 
