--- a/index.html
+++ b/index.html
@@ -617,7 +617,6 @@
         function enterRoom(roomName, providedPw = null) {
             if (!userName) { setNickname(); if (!userName) return; }
 
-            // 생성 시 입력한 비번이 없으면 물어보기
             let password = providedPw;
             if (password === null) {
                 password = prompt("비밀번호가 있는 방이라면 입력해주세요. (없으면 바로 확인)");
@@ -629,9 +628,19 @@
             document.getElementById('chat-area').style.display = 'flex';
             document.getElementById('room-title').textContent = roomName;
 
-            // 서버로 비밀번호와 함께 입장 요청
             socket.emit('join room', { room: roomName, name: userName, password: password });
+
+            // [추가] 브라우저 히스토리에 'chat' 상태를 추가합니다.
+            window.history.pushState({ page: 'chat' }, '', '');
         }
+
+        // 모바일 하단 뒤로가기 버튼 감지
+        window.onpopstate = function (event) {
+            // 만약 현재 채팅창이 열려있는 상태라면
+            if (document.getElementById('chat-area').style.display === 'flex') {
+                goBack(); // 원래 만드신 뒤로가기 함수 실행!
+            }
+        };
 
         // [추가] 비밀번호 틀렸을 때 처리 (스크립트 아무 곳에나 추가)
         socket.on('join error', (data) => {
@@ -644,6 +653,12 @@
             currentRoom = '';
             document.getElementById('list-area').style.display = 'flex';
             document.getElementById('chat-area').style.display = 'none';
+
+            // [추가] 만약 히스토리에 'chat' 상태가 남아있다면 한 단계 뒤로 돌려줍니다.
+            // (상단 버튼으로 나갈 때 중복 히스토리 방지)
+            if (window.history.state && window.history.state.page === 'chat') {
+                window.history.back();
+            }
         }
 
         function setNickname() {
